test/pointer/fail/ptr_gteq04.v3
//@execute -1=true; 0=true; 1=false
component ptr_gteq04 {
	def n: Pointer;
	def main(a: int) -> bool {
		var p = n.add(5), q = p.add(a);
		return apply(p.gteq, q);
	}
	def apply(f: Pointer -> bool, q: Pointer) -> bool {
		return f(q);
	}
}
